# Vesta

./: CMakeLists.txt  TODOS.txt  test.txt
include/: Cursor.h  Document.h  EditActions.h  EditManager.h  GLDocumentRenderer.h  Iterators.h  Request.h  TextBuffer.h  TextChunk.h  TextManager.h  TextWindow.h  Tokenizer.h  Types.h  VestaOptions.h  vesta.h
include/Freetype-core/: TextureFont.h  VertexBuffer.h  opengl.h
src/: CMakeLists.txt  Cursor.cpp  Document.cpp  EditActions.cpp  EditManager.cpp  GLDocumentRenderer.cpp  Request.cpp  TextChunk.cpp  TextManager.cpp  TextWindow.cpp  Types.cpp  VestaOptions.cpp  main.cpp  vesta.cpp  vesta.ui
src/lib/Freetype-core/: CMakeLists.txt  TextureFont.cpp  VertexBuffer.cpp  mat4.c
